# cinema-tickets-poc

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: django.yml
backend/django_api/: Dockerfile  README.md  pyproject.toml
backend/django_api/cinema/: admin.py  models.py  tasks.py  tests.py  urls.py
backend/django_api/cinema/api/: serializers.py  viewsets.py
backend/django_api/cinema/fixtures/: test.json
backend/django_api/cinema/migrations/: 0001_initial.py  0002_movie.py  0002_remove_room_layout.py  0003_alter_chair_room.py  0003_alter_movie_title.py  0004_chair_hold_until.py  0005_waitlist.py
backend/django_api/cinema/tests/: test_api.py  test_tasks.py
backend/django_api/core/: admin.py  models.py  urls.py  utils.py
backend/django_api/core/api/: serializers.py  viewsets.py
backend/django_api/core/celery/: celery.py
backend/django_api/core/management/commands/: createadmin.py
backend/django_api/django_api/: asgi.py  settings.py  urls.py  wsgi.py
backend/django_api/scripts/: entrypoint.sh  start.sh
backend/movies_api/: Dockerfile  README.md  movies.json  pyproject.toml
backend/movies_api/src/: main.py
infra/nginx/: nginx.conf
tools/insomnia/: Insomnia_dump.json
tools/scripts/: hot_test.sh
